--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Orro IFTTT</string>
+    <string name="turn_on_webhook">turn_on</string>
+    <string name="turn_off_webhook">turn_off</string>
+    <string name="set_webhook">set</string>
 </resources>
