--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="turn_on_webhook">turn_on</string>
     <string name="turn_off_webhook">turn_off</string>
     <string name="set_webhook">set</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="switch_control_fragment">fragment_control</string>
+    <string name="switch_add_room_fragment">fragment_switch_add_room</string>
 </resources>
