--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="switch_control_fragment">fragment_control</string>
-    <string name="switch_add_room_fragment">fragment_switch_add_room</string>
+    <string name="switch_control_fragment">Orro IFTTT Control</string>
+    <string name="switch_add_room_fragment">Add Room</string>
 </resources>
