Add field to enter webhook, and prepopulate it if it already exists

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="switch_control_fragment">Orro IFTTT Control</string>
     <string name="switch_add_room_fragment">Add Room</string>
 
+    <string name="preference_file_key">preference_file_key_webhook</string>
     <string name="saved_webhook_api_key">saved_key_for_ifttt</string>
     <string name="default_webhook_api_key">default-webhook-key</string>
 </resources>
