--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="save_text">Save</string>
     <string name="validate_string">Validate</string>
     <string name="configure_home_string">Get started by creating IFTTT Applets using Webhooks and Orro!</string>
+    <string name="set_dimming_level_hint">Set Dimming Level Endpoint</string>
 </resources>
