Change logo to gold background and update name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OrrIFTTT</string>
+    <string name="app_name">Spark Director</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_for_fragments">LIGHT FOR YOUR LIFE</string>
